--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,8 +40,20 @@ services:
     image: grafana/grafana
     ports:
       - "3000:3000"
+    volumes:
+      - ./grafana-dashboards:/var/lib/grafana/dashboards
+      - ./provisioning/dashboards:/var/lib/grafana/provisioning
     depends_on:
       - prometheus
+
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter
+    environment:
+      - DATA_SOURCE_NAME=postgresql://yourusername:yourpassword@postgres:5432/firelink?sslmode=disable
+    ports:
+      - "9187:9187"
+    depends_on:
+      - postgres
 
 volumes:
   pgdata:
