--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'firelink'
     static_configs:
       - targets: ['firelink:8080'] # or 'localhost:8080' if running locally
+  - job_name: 'postgres'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
