--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,11 +13,11 @@ repos:
       args: ["--verbose"]
     - id: check-github-actions
       args: ["--verbose"]
-- repo: https://github.com/dnephin/pre-commit-golang
-  rev: v0.5.1
+- repo: https://github.com/tekwizely/pre-commit-golang
+  rev: master
   hooks:
     - id: go-fmt
+      args: [ '-w' ]
     # - id: go-vet
-    # - id: golangci-lint
-    # - id: go-imports
     - id: go-mod-tidy
+    - id: go-test-mod
