--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     # If you use environment variables for DB, etc.
     environment:
       - POSTGRES_HOST=postgres
-      - POSTGRES_USER=yourusername
-      - POSTGRES_PASSWORD=yourpassword
-      - POSTGRES_DB=firelink
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - SPOONACULAR_API_KEY=${SPOONACULAR_API_KEY}
     # Uncomment if you want to wait for DB, etc.
     depends_on:
       - postgres
@@ -17,9 +18,9 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: yourusername
-      POSTGRES_PASSWORD: yourpassword
-      POSTGRES_DB: firelink
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     volumes:
